--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon"
+    "start": "nodemon --ext js, graphql"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "apollo-server": "^2.26.0",
-    "graphql": "^14.7.0"
+    "graphql": "^14.7.0",
+    "graphql-import": "^1.0.2"
   },
   "devDependencies": {
     "nodemon": "^1.18.10"
